suite/tests/decls/invalid/decl-no-type.c
int main(void)
{
    static foo;
}
